    shell that are similar to wish's.
  o Changed the tclx_errorHandler functionality to be consistent with bgerror.
    Uncaught synchronous errors now look for a procedure named
    tclx_errorHandler, rather than a variable which contains a procedure name.
    For backwards compatibility, a check is still made for a variable
    named tclx_errorHandler.  This functionality is deprecated and scripts
    should be change to use the new form.
-------------------------------------------------------------------------------
 6 Apr 96:
  o Added guidelines for creating a pkgIndex.tcl file for use with TclX.  Build
    a prototype file, pkgIndex.proto, that can be merged with other
    pkgIndex.tcl files.
-------------------------------------------------------------------------------
24 Apr 96:
  o Chanced 'mkdir -path' to not return an error if the full path already
    exists.
===============================================================================
25 Apr 96: Released TclX 7.5.0
===============================================================================
29 Apr 96:
  o Fixed build problems with shared libraries on Solaris and HP-UX.
  o Added *LIB_SPEC variables to tclx/tkxConfig.sh. 
  o Removed explicit support for master installation model.  The same affect
    can be achieved with --prefix.
  o Its no longer a requirement to use --enabled-shared with Tcl & Tk to use it
    with TclX.
===============================================================================
 2 May 96: Released TclX 7.5.0 patch 1
===============================================================================
 4 May 96:
  o Fix bug where manual pages were not installed.
-------------------------------------------------------------------------------
 6 May 96:
  o Fixed lindex and lrange indexing out of bounds memory when negative indexes
    are used.
-------------------------------------------------------------------------------
