@@ -12,7 +12,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Common.mk.in,v 5.18 1996/04/30 07:13:04 markd Exp $
+# $Id: Common.mk.in,v 5.19 1996/05/03 05:56:55 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -60,6 +60,12 @@ TKX_SHLIB_BASE_NAME  = @TKX_SHLIB_BASE_NAME@
 TKX_SHLIB_NAME       = @TKX_SHLIB_NAME@
 
 #------------------------------------------------------------------------------
+# Compiler argument required if the objects are going to be placed into a
+# shared library.  Empty if shared libraries are not being built.
+#
+TCLX_USE_SHLIB_CFLAGS = ${@TCLX_USE_SHLIB_CFLAGS@}
+
+#------------------------------------------------------------------------------
 # Linker arguments to pick up TclX libraries.
 #
 TCLX_BUILD_LIB_SPEC  = @TCLX_BUILD_LIB_SPEC@
@@ -75,8 +81,8 @@ TCLX_LD_SEARCH_FLAGS = @TCLX_LD_SEARCH_FLAGS@
 #
 TCL_DEFS             = @TCL_DEFS@
 TCL_LIBS             = @TCL_LIBS@
+TCL_EXEC_PREFIX      = @TCL_EXEC_PREFIX@
 TCL_SHLIB_CFLAGS     = @TCL_SHLIB_CFLAGS@
-TCL_USE_SHLIB_CFLAGS = ${@TCL_USE_SHLIB_CFLAGS@}
 TCL_LD_FLAGS         = @TCL_LD_FLAGS@
 TCL_DL_LIBS          = @TCL_DL_LIBS@
 TCL_SHLIB_LD         = @TCL_SHLIB_LD@
@@ -86,6 +92,7 @@ TCL_LD_SEARCH_FLAGS  = @TCL_LD_SEARCH_FLAGS@
 
 TK_DEFS              = @TK_DEFS@
 TK_LIBS              = @TK_LIBS@
+TK_EXEC_PREFIX       = @TK_EXEC_PREFIX@
 TK_XINCLUDES         = @TK_XINCLUDES@
 TK_XLIBSW            = @TK_XLIBSW@
 TK_BUILD_LIB_SPEC    = @TK_BUILD_LIB_SPEC@
